--- a/Resources/views/admin/Answer/show.html.twig
+++ b/Resources/views/admin/Answer/show.html.twig
@@ -22,12 +22,11 @@
 {% endblock %}
 
 {% block sidebar %}
-
-    {{ include('@AldafluxGameQuizz/admin/Answer/_delete_form.html.twig') }}
-    
-    <p><br>
-    <a class="btn btn-lg btn-block btn-warning"  href='{{ path("algq_admin_answer_edit", {'id':answer.id}) }}'>Modifier</a>
-    <p><br>
-
+     {% if is_granted('ROLE_GAME_EDITOR') %}
+            {{ include('@AldafluxGameQuizz/admin/Answer/_delete_form.html.twig') }}
+            <p><br>
+            <a class="btn btn-lg btn-block btn-warning"  href='{{ path("algq_admin_answer_edit", {'id':answer.id}) }}'>Modifier</a>
+            <p><br>
+    {% endif %}
 
 {% endblock %}
