Corection Bug js

--- a/Resources/views/game/fini.html.twig
+++ b/Resources/views/game/fini.html.twig
@@ -8,6 +8,7 @@
  {% endblock %}
 
         {% block stylesheets %}
+            {{ parent() }}
               <link rel="stylesheet" href="{{ asset('bundles/aldafluxgamequizz/css/quizz.css') }}" />
               <link rel="stylesheet" href="{{ asset('bundles/aldafluxgamequizz/css/confetti.css') }}" />
               
