--- a/Resources/views/game/index.html.twig
+++ b/Resources/views/game/index.html.twig
@@ -58,7 +58,7 @@
                     <div  id='back-to-board' class='btn btn_footer btn_footer_left back-to-board dontshowfirst'>Retour <br>aux questions</div>
                 </div>
                 <div  class='col-md-6'>
-                    <div  id='question_next' class='btn btn_footer btn_footer_right question_next dontshowfirst'>Question <br>suivante</div>
+                    <div  id='question_next' class='btn btn_footer btn_footer_right question_next dontshowfirst'>Scène <br>suivante</div>
                     <div  id='btn-fini' class='btn btn_footer btn_footer_right question_next dontshowfirst'>Fin</div>
                 </div>
             </div>
