--- a/Resources/views/game/endpage/fini.html.twig
+++ b/Resources/views/game/endpage/fini.html.twig
@@ -25,20 +25,9 @@
     
     <canvas id="confetti"></canvas>
 
-<div id="party-info">
 
-  <h2>Tableau termin&eacute; !</h2>
-  <p>F&eacute;licitations ! </p>
-  
+    {{ include('@AldafluxGameQuizz/game/endpage/_congrats.html.twig') }}
 
-    <video id='Player' src="" class="" onclick="this.paused ? this.play() : this.pause();">    </video>
-
-        <div id='footer'>
-            <a href='index.html'  class='btn'>Retour &agrave; l'accueil</a>
-            <div id='reset-data'  class='btn'>Recommencer une partie</div>
-        </div>
-    </div>
-    
     
           
         
