--- a/Resources/views/game/game/_inc_game_play.html.twig
+++ b/Resources/views/game/game/_inc_game_play.html.twig
@@ -1,5 +1,6 @@
     <div class="page-header">
         <h1 id='game_title'></h1>
+        <h2 id='game_subtitle'></h2>
     </div>
 
     <div id="presentation">
