--- a/Resources/public/css/quizz.css
+++ b/Resources/public/css/quizz.css
@@ -1,4 +1,13 @@
 
+
+
+.center
+{
+    text-align: center;
+}
+
+
+
 .videoContainer
 {
     width:100%;
@@ -112,8 +121,16 @@ h1#game_title
             display: table-cell;
             float: right;
             width: 32px;
-            
         }
+        
+        @media only screen and (max-width: 767px) 
+        {
+            #board li .icon, #boards .icon
+            {
+                width: 18px;
+            }
+        }
+
         
         
         
