--- a/Resources/views/admin/Question/show.html.twig
+++ b/Resources/views/admin/Question/show.html.twig
@@ -109,14 +109,26 @@
 {% endblock %}
 
 {% block sidebar %} 
+
+    <a class="btn btn-lg btn-block btn-primary"   href='{{ path("algq_play_question", {'slug':question.game.slug, 'id':question.id}) }}'>Play</a>
+       <p><br>
     {% if is_granted('ROLE_GAME_EDITOR') %}
-        {%  if question.deletable and ROLE_GAME_EDITOR %}
+        {%  if question.deletable %}
                {{ include('@AldafluxGameQuizz/admin/Question/_delete_form.html.twig') }}
        {%  endif  %}
+
        <p><br>
        <a class="btn btn-lg btn-block btn-warning"  href='{{ path("algq_admin_question_edit", {'id':question.id}) }}'>Modifier</a>
        <p><br>
 
        <a class="btn btn-lg btn-block btn-primary"  href='{{ path("algq_admin_question_new_answer", {'id':question.id}) }}'>Nouvelle réponse</a>
+       
+        {%  if not question.AnswersAreOrdered %}
+            <a class="btn btn-lg btn-block btn-danger"  href='{{ path("algq_admin_question_reorder", {'id':question.id}) }}'>Réordonner les questions</a>
+        {%  endif  %}
+
+        <a class="btn btn-lg btn-block btn-primary"  href='{{ path("algq_admin_question_shuffle", {'id':question.id}) }}'>Schuffle </a>
+        
+        
     {%  endif  %}
 {% endblock %}
