maj du formulaire

--- a/Resources/views/admin/inc/_form.html.twig
+++ b/Resources/views/admin/inc/_form.html.twig
@@ -1,4 +1,83 @@
+
 {{ form_start(form) }}
+
+    <div class="row">
+        <div class="col-md-1">
+            {{ form_row(form.ordre) }}
+        </div>
+        <div class="col-md-11">
+            {{ form_row(form.name) }}
+        </div>
+    </div>
+            
+        
+{{ form_start(form) }}
+
+    <div class="row">
+        <div class="col-md-1">
+            {{ form_row(form.ordre) }}
+        </div>
+        <div class="col-md-11">
+            {{ form_row(form.name) }}
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-8">
+            {{ form_row(form.questionText) }}
+        </div>
+        <div class="col-md-4">
+            {{ form_row(form.questionAudioFichier) }}
+            
+            {%  if question is defined %}
+                {{ include('@AldafluxGameQuizz/admin/inc/_file.html.twig', {'file': question.questionAudio}) }}
+            {%  endif %}
+                
+            
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-8">
+            {{ form_row(form.answerText) }}
+        </div>
+        <div class="col-md-4">
+            {{ form_row(form.answerAudioFichier) }}
+            {%  if question is defined %}
+                {{ include('@AldafluxGameQuizz/admin/inc/_file.html.twig', {'file': question.answerAudio}) }}
+            {%  endif %}
+
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-8">
+            {{ form_row(form.answerPlusText) }}
+        </div>
+        <div class="col-md-4">
+            {{ form_row(form.answerPlusAudioFichier) }}
+            {%  if question is defined %}
+                {{ include('@AldafluxGameQuizz/admin/inc/_file.html.twig', {'file': question.answerPlusAudio}) }}
+            {%  endif %}
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            {{ form_row(form.questionVideoFichier) }}
+
+            {%  if question is defined %}
+            {{ include('@AldafluxGameQuizz/admin/inc/_file.html.twig', {'file': question.questionVideo}) }}
+            {%  endif %}
+
+        </div>
+        <div class="col-md-6">
+            {{ form_row(form.answerVideoFichier) }}
+            {%  if question is defined %}
+            {{ include('@AldafluxGameQuizz/admin/inc/_file.html.twig', {'file': question.answerVideo}) }}
+            {%  endif %}
+        </div>
+    </div>        
+        
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <button class="btn btn-primary btn-block">Sauvegarder</button>
+    
+    
 {{ form_end(form) }}
+ 
